<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enterQuoteContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EnterQuoteActivity"
    android:background="@color/grey">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:text="@string/create_quote"
        android:textStyle="bold"
        android:textColor="@color/milkyYellow"
        android:textSize="@dimen/_27ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/quoteET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:inputType="textMultiLine"
        android:hint="@string/enter_quote_here"
        android:padding="@dimen/_11sdp"
        android:maxLength="200"
        android:textColorHint="#919191"
        android:backgroundTint="@color/milkyYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/insertQuoteFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        android:backgroundTint="@color/milkyYellow"
        android:clickable="true"
        android:contentDescription="@string/save_quote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/save_ic"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>